Fixed margin issue causing y axis scrollbar to appear on pages

--- a/project1/src/components/pages/Landing/style.css
+++ b/project1/src/components/pages/Landing/style.css
@@ -9,3 +9,7 @@
 .light-text {
   color: white !important;
 }
+
+.jumbo-div {
+  margin-top: 20vh;
+}
